--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -1,27 +1,51 @@
 <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/header.css">
+<style>
+   
+
+    html body {
+        zoom: 100%;
+    }
+</style>
 
 <body>
 
-        <header class="headerSize" >
-            <div class="row">
-                <div class="col1">
-                    <img src=<%=data.LogoURL%>  alt="LOGO">
-                </div>
-                <div class="col2">
-                    <h5><%=data.shopdetails.Name%> </h5>  
-                    <h6><%=data.shopdetails.Address%> </h6>  
-                    <h6><%=data.shopdetails.MobileNo1%> 
-                        <% if (data.shopdetails.MobileNo2){%> 
-                            ,
-                        <%}%>
-                        <%=(data.shopdetails.MobileNo2 !== 'null') ? data.shopdetails.MobileNo2 : '' %>
-                    </h6>
-                     <h6><%=data.shopdetails.Email%></h6>
-                     <h6><%=(data.shopdetails.PhoneNo !== 'null') ? data.shopdetails.PhoneNo : '' %></h6>
-                </div>
-            </div>    
+    <% if (data.billformate.BillHeader==3){%>
+        <header class="headerSize" <% %> style='width:<%= data.HeaderWidth %>; height: <%= data.HeaderHeight %>;'>
+                    <div class="row">
+                        <div class="col1" <% %> style="text-align: <%= data.ImageAlign %>;">
+                                <img src=<%=data.LogoURL%> alt="LOGO" style='width:<%= data.ImageWidth %>; height:
+                                    <%= data.ImageHeight %>;'>
+                        </div>
+                        <div class="col2">
+                            <span <% %> style='font-size:<%= data.ShopNameFont %>; font-weight: <%= data.ShopNameBold %>
+                                        ; color: <%= data.Color %>;'>
+                                            <%=data.shopdetails.Name%>
+                            </span> <br>
+                            <span <% %> style='line-height:<%= data.LineSpace %>;font-size:<%= data.ShopDetailFont %>;'>
+                                        <span>
+                                            <%=data.shopdetails.Address%>
+                                        </span> <br>
+                                        <span>
+                                            <%=data.shopdetails.MobileNo1%>
+                                                <% if (data.shopdetails.MobileNo2){%>
+                                                    ,
+                                                    <%}%>
+                                                        <%=(data.shopdetails.MobileNo2 !=='null' ) ?
+                                                            data.shopdetails.MobileNo2 : '' %>
+                                        </span><br>
+                                        <span>
+                                            <%=data.shopdetails.Email%>
+                                        </span><br>
+                                        <span>
+                                            <%=(data.shopdetails.PhoneNo !=='null' ) ? data.shopdetails.PhoneNo : '' %>
+                                        </span>
+                            </span>
+                        </div>
+                    </div>
         </header>
-   
+        <%}%>
+
 </body>
+
 </html>
