--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1,5 +1,5 @@
-<section *ngIf="this.editCustomerView === true">
-<div class="card">
+
+<div class="card" *ngIf="this.CustomerView == true">
     <div class="header">
         <div class="row">
             <div class="col-lg-1 col-md-2 col-6">
@@ -1530,4 +1530,4 @@
         </div>
     </div>
 </ng-template>
-</section>
+
