--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1580,7 +1580,7 @@
                     </div>
                 </div>
                 <!-- bill info -->
-                <div *ngIf="this.id != 0">
+                <div *ngIf="this.id != 0 && this.CustomerBillView == true">
                     <app-bill @fade [customerID2]="this.id"></app-bill>
                 </div>
             </div>
