--- a/web1/src/app/admin/reminder/reminder.component.html
+++ b/web1/src/app/admin/reminder/reminder.component.html
@@ -36,10 +36,10 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td style="background-color: #1e2672; width:25%;">
-                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        <td style=" width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                                         </td>
                                                         <td>SNo</td>
                                                         <td>Name</td>
@@ -154,10 +154,10 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td style="background-color: #1e2672; width:25%;">
-                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        <td style=" width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                                         </td>
                                                         <td>SNo</td>
                                                         <td>Name</td>
@@ -270,10 +270,10 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td style="background-color: #1e2672; width:25%;">
-                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            <td style=" width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                             </td>
                                             <td>SNo</td>
                                             <td>i</td>
@@ -313,10 +313,10 @@
                                   </thead>
                                   <tbody>
                                       <tr>
-                                          <td style="background-color: #1e2672; width:25%;">
-                                              <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                              <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                              <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                          <td style=" width:25%;">
+                                              <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                              <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                              <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                           </td>
                                           <td>i</td>
                                           <td>vinay</td>
@@ -356,10 +356,10 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td style="background-color: #1e2672; width:25%;">
-                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        <td style=" width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                                         </td>
                                                         <td>SNo</td>
                                                         <td>Name</td>
@@ -420,10 +420,10 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td style="background-color: #1e2672; width:25%;">
-                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        <td style=" width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                                         </td>
                                                         <td>SNo</td>
                                                         <td>Name</td>
@@ -483,10 +483,10 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td style="background-color: #1e2672; width:25%;">
-                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            <td style=" width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                             </td>
                                             <td>i</td>
                                             <td>vinay</td>
@@ -523,10 +523,10 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td style="background-color: #1e2672; width:25%;">
-                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
-                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
-                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            <td style=" width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-2xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-2xl emailIocn"></i>
                                             </td>
                                             <td>i</td>
                                             <td>vinay</td>
